@@ -125,6 +125,19 @@
    <item row="1" column="0" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>&amp;Icon size:</string>
+       </property>
+       <property name="buddy">
+        <cstring>iconsize_spin</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="iconsize_spin"/>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -172,6 +185,7 @@
   <tabstop>up_button</tabstop>
   <tabstop>right_button</tabstop>
   <tabstop>down_button</tabstop>
+  <tabstop>iconsize_spin</tabstop>
   <tabstop>separator_button</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
