@@ -1,5 +1,10 @@
 [b]Version 14.9.0.x[/b]:
 
+(2015-02-01)
+ * Add an option in the toolbar editor to set the size of the icons.
+   (Currently it doesn't look good if you increase the size of the icons
+   in the skin gui).
+
 (2015-01-31)
  * Add the options -ontop and -no-ontop for the command line.
    They just change the "Stay on top" options in the preferences.
